# GCards

./: Makefile.am  README  autogen.sh  configure.ac  meson.build
src/: Makefile.am  gc-app.c  gc-app.h  gc-card.c  gc-card.h  gc-greeter-window.c  gc-greeter-window.h  gc-main.c  gc-scrolled-window.c  gc-scrolled-window.h  gc-session-window.c  gc-session-window.h  gc-window.c  gc-window.h  gcards.gresource.xml  meson.build
src/bundles/: bundles.json
src/bundles/pronouns/: personal_pronouns.json  possessive_pronouns.json
src/bundles/the_most_frequently_used_words/: the_first_hundred.json
src/resources/ui/: gc-greeter-window.ui  gc-session-window.ui
tools/: Makefile.am  gcards-greeter-window-builder.rb  gcards-session-window-builder.rb
