ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = src

MAINTAINERCLEANFILES =                                                         \
		$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL)                     \
		$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN)                  \
		$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL)                   \
		$(NULL)

-include $(top_srcdir)/git.mk
